# relative-illumination

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
rawnerfacto/: colmap_raw_image_dataparser.py  raw_image_dataset.py  raw_utils.py  rawnerfacto_config.py  rawnerfacto_field.py  rawnerfacto_model.py  rawparser_config.py  utils.py
relative_illumination/: debug_utils.py  relative_illumination_config.py  relative_illumination_field.py  relative_illumination_model.py
utils/: exr_to_png.py  gopro_converter.py  imgs_to_vid.py  launch_multi.py
